# mlb_gbsv_v1.0_git

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  azure.yaml  debug_data.py  patch_mypy.py  patch_toml.py  patch_toml2.py  pyproject.toml  requirements-lock.txt  test_lahman.py  test_mi_post.py
.devcontainer/: devcontainer.json
.github/workflows/: daily.yml  deploy.yml  test.yml
DataAnalysisExpert/: bias_analysis.py  bias_comparison.py  bias_diagnostic.py  check_models.py  check_synth.py  e2e_bias_test.py  inspect_picks.py  picks_debiased_2026-04-01.json  picks_e2e_test.json  picks_raw_2026-04-01.json  slate_2026-04-01.csv  slate_2026-04-01.json  verify_fixes.py  verify_v2.py
infra/: main.bicep
scripts/: backtest.py  bootstrap_models.py  daily_run.py  deploy.ps1  install_daily_first_pitch_task.ps1  pick_sheet.py  predict.py  run_daily_before_first_pitch.ps1  server.py  setup_env.ps1  setup_secrets.ps1  setup_teams_webhook.ps1  train.py  tune.py
scripts/migrations/versions/: 2b81c85f23ea_init_schema.py  3aa6e699a436_add_model_registry.py  7e8a3c4b9f12_add_published_slate_ssot.py
scripts/static/: slate.html
src/mlbv1/: __init__.py  azure_secrets.py  config.py  environment.py  metrics.py  observability.py
src/mlbv1/alerts/: __init__.py  discord.py  email_sender.py  manager.py  teams.py
src/mlbv1/dashboard/: __init__.py  app.py
src/mlbv1/data/: historical_enrichment.py  loader.py  mapping.py  preprocessor.py  slate_filter.py  synthetic_history.py
src/mlbv1/features/: __init__.py  engineer.py
src/mlbv1/models/: ensemble.py  market_deriver.py  predictor.py  registry.py  trainer.py  training_helpers.py  tuning.py
src/mlbv1/picks/: __init__.py  odds_math.py  quality.py  rationale.py
src/mlbv1/pipeline/: __init__.py  consensus.py  drift.py  feature_prep.py
src/mlbv1/tracking/: __init__.py  database.py  roi.py
tests/: __init__.py  conftest.py  test_alerts.py  test_config.py  test_data.py  test_ensemble.py  test_environment.py  test_features.py  test_features_advanced.py  test_integration.py  test_loaders.py  test_mapping.py  test_metrics.py  test_models.py  test_picks.py  test_preprocessor.py  test_slate_filter.py  test_tracking.py  test_training_helpers.py
