[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "mlbv1"
version = "0.2.0"
description = "MLB spread prediction pipeline — robust ensemble with tracking, alerts & dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "JDSB" }]
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0",
  "lightgbm>=4.0.0",
]

[project.optional-dependencies]
dashboard = [
  "streamlit>=1.30.0",
  "plotly>=5.18.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "pandas-stubs>=2.1.0",
]
all = ["mlbv1[dashboard,dev]"]

[project.scripts]
mlbv1-train = "mlbv1.cli:train_cli"
mlbv1-predict = "mlbv1.cli:predict_cli"
mlbv1-dashboard = "mlbv1.dashboard.app:main"

[project.urls]
Homepage = "https://github.com/jdsb123/mlb_gbsv_v1.0_git"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["mlbv1"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlbv1"]
