[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "mlbv1"
version = "1.0.0"
description = "MLB spread prediction pipeline — robust ensemble with tracking, alerts & dashboard"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "JDSB" }]
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.1.4",
  "scikit-learn>=1.4.2",
  "scipy>=1.11.0",
  "xgboost>=2.0.3",
  "lightgbm>=4.3.0",
  "joblib>=1.4.2",
  "requests>=2.31.0",
  "flask>=3.0.3",
  "gunicorn>=22.0.0",
  "setuptools>=75.0.0",
  "azure-identity>=1.16.0",
  "azure-keyvault-secrets>=4.8.0",
  "azure-storage-blob>=12.20.0",
  "azure-monitor-opentelemetry>=1.5.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "optuna>=3.6.1",
  "pybaseball>=2.2.0"
]

[project.optional-dependencies]
dashboard = [
  "streamlit==1.35.0",
  "plotly==5.22.0",
]
dev = [
  "pytest>=8.2.1",
  "ruff>=0.5.3",
  "mypy>=1.10.0",
  "pandas-stubs>=2.1.4.231227",
  "alembic>=1.13.1",
]
all = [
  "streamlit>=1.30.0",
  "plotly>=5.18.0",
  "pytest>=8.0.0",
  "ruff>=0.5.3",
  "mypy>=1.8.0",
  "pandas-stubs>=2.1.0",
]

# NOTE: CLI entry points removed — mlbv1.cli module does not exist.
# Use `python scripts/train.py` and `python scripts/predict.py` directly.
# [project.scripts]
# mlbv1-train = "mlbv1.cli:train_cli"
# mlbv1-predict = "mlbv1.cli:predict_cli"
# mlbv1-dashboard = "mlbv1.dashboard.app:main"

[project.urls]
Homepage = "https://github.com/jdsb123/mlb_gbsv_v1.0_git"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["mlbv1"]

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
strict = false
disallow_any_generics = false
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlbv1"]
